--- a/app/Views/students.html
+++ b/app/Views/students.html
@@ -46,37 +46,9 @@
                 <th>Ações</th>
             </tr>
             </thead>
-            <tbody>
-
-            <tr>
-                <td>1</td>
-                <td>José da Silva</td>
-                <td>1990-05-15</td>
-                <td>123.456.789-09</td>
-                <td>jose@email.com</td>
-                <td>
-                    <button class="btn btn-sm btn-success" data-bs-toggle="modal" data-bs-target="#editModal1">
-                        <i class="bi bi-pencil-square"></i>
-                    </button>
-                    <button class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal1">
-                        <i class="bi bi-trash"></i>
-                    </button>
-                </td>
-            </tr>
-            </tbody>
+            <tbody id="alunosTable"></tbody>
         </table>
     </div>
-
-    <nav aria-label="Paginação" class="mt-4">
-        <ul class="pagination justify-content-center">
-            <li class="page-item disabled">
-                <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Anterior</a>
-            </li>
-            <li class="page-item active"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">Próximo</a></li>
-        </ul>
-    </nav>
 </div>
 
 <div class="modal fade" id="addModal" tabindex="-1">
@@ -107,5 +79,6 @@
 </div>
 
 <script src="/js/bootstrap.bundle.min.js"></script>
+<script src="/js/students.js"></script>
 </body>
 </html>
