--- a/app/Views/students/list.html
+++ b/app/Views/students/list.html
@@ -37,6 +37,17 @@
         </button>
     </div>
 
+    <div class="mb-3">
+        <label for="searchInput"></label><input
+                type="text"
+                class="form-control"
+                id="searchInput"
+                name="searchName"
+                placeholder="Buscar por nome..."
+                onkeyup="handleSearch()"
+        >
+    </div>
+
     <div class="table-responsive">
         <table class="table table-striped table-hover">
             <thead>
