--- a/app/Views/main.html
+++ b/app/Views/main.html
@@ -51,9 +51,9 @@
                     <i class="bi bi-journal-bookmark card-icon mb-3"></i>
                     <h4 class="card-title fw-bold">Turmas</h4>
                     <p class="text-muted text-center mb-4">
-                        Gerencie turmas e descrições<br>
+                        Gerencie cadastro de turmas<br>
                     </p>
-                    <a href="/" class="btn btn-custom mt-auto fw-bold">
+                    <a href="/courses" class="btn btn-custom mt-auto fw-bold">
                         <i class="bi bi-folder2-open me-2"></i>Acessar
                     </a>
                 </div>
