refactor: refatora list

--- a/app/Views/courses/list.html
+++ b/app/Views/courses/list.html
@@ -56,32 +56,12 @@
 <div class="modal fade" id="classModal" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="modalLabel"></h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form id="classForm">
-                    <input type="hidden" id="classId" name="id">
-                    <div class="mb-3">
-                        <label for="className" class="form-label">Nome da Turma</label>
-                        <input type="text" class="form-control" id="className" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="classDescription" class="form-label">Descrição</label>
-                        <textarea class="form-control" id="classDescription" rows="3"></textarea>
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                <button type="button" class="btn btn-primary" onclick="saveClass()">Salvar</button>
-            </div>
         </div>
     </div>
 </div>
 
 <script src="/js/bootstrap.bundle.min.js"></script>
 <script src="/js/courses.js"></script>
+<script src="/js/resetForm.js"></script>
 </body>
 </html>
