--- a/app/Views/students/list.html
+++ b/app/Views/students/list.html
@@ -74,5 +74,6 @@
 
 <script src="/js/bootstrap.bundle.min.js"></script>
 <script src="/js/students.js"></script>
+<script src="/js/resetForm.js"></script>
 </body>
 </html>
