feat: update e delete das turmas

--- a/app/Views/courses/form.html
+++ b/app/Views/courses/form.html
@@ -2,12 +2,12 @@
     <input type="hidden" name="id" id="classId">
     <div class="modal-body">
         <div class="mb-3">
-            <label for="className" class="form-label">Nome da Turma</label>
-            <input type="text" class="form-control" id="className" required>
+            <label for="className" class="form-label" >Nome da Turma</label>
+            <input type="text" class="form-control" id="className" name="name" required>
         </div>
         <div class="mb-3">
             <label for="classDescription" class="form-label">Descrição</label>
-            <textarea class="form-control" id="classDescription" rows="3"></textarea>
+            <textarea class="form-control" id="classDescription" rows="3" name="description" required></textarea>
         </div>
     </div>
         <div class="modal-body">
