--- a/app/Views/courses/list.html
+++ b/app/Views/courses/list.html
@@ -27,7 +27,7 @@
         <h2 class="mb-0">Gerenciamento de Turmas</h2>
         <button class="btn btn-primary"
                 data-bs-toggle="modal"
-                data-bs-target="#classModal"
+                data-bs-target="#courseModal"
                 onclick="prepareModal('create')">
             <i class="bi bi-plus-circle"></i> Nova Turma
         </button>
@@ -53,7 +53,7 @@
     </nav>
 </div>
 
-<div class="modal fade" id="classModal" tabindex="-1">
+<div class="modal fade" id="courseModal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
         </div>
