--- a/app/Views/courses/list.html
+++ b/app/Views/courses/list.html
@@ -60,8 +60,18 @@
     </div>
 </div>
 
+<div class="modal fade" id="enrollmentModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="/js/bootstrap.bundle.min.js"></script>
 <script src="/js/courses.js"></script>
+<script src="/js/enrollments.js"></script>
 <script src="/js/resetForm.js"></script>
 </body>
 </html>
