--- a/app/Views/courses/list.html
+++ b/app/Views/courses/list.html
@@ -69,9 +69,30 @@
     </div>
 </div>
 
+<div class="modal fade" id="studentListModal" tabindex="-1" aria-labelledby="studentListModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-scrollable">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="studentListModalLabel">Alunos Matriculados</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+            </div>
+            <div class="modal-body">
+                <ul class="list-group" id="studentListContent">
+                    <li class="list-group-item">Carregando...</li>
+                </ul>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 <script src="/js/bootstrap.bundle.min.js"></script>
 <script src="/js/courses.js"></script>
-<script src="/js/enrollments.js"></script>
+<script src="/js/enrollment.js"></script>
+<script src="/js/listEnrollments.js"></script>
 <script src="/js/resetForm.js"></script>
 </body>
 </html>
