--- a/app/Views/courses/list.html
+++ b/app/Views/courses/list.html
@@ -16,8 +16,9 @@
             <i class="bi bi-building me-2"></i>FIAP Admin
         </a>
         <div class="d-flex align-items-center">
-            <a href="#" class="btn btn-outline-light me-3">Usuário</a>
-            <a href="#" class="btn btn-danger">Sair</a>
+            <a href="#" id="logoutButton" class="btn btn-danger">
+                <i class="bi bi-box-arrow-right me-2"></i>Sair
+            </a>
         </div>
     </div>
 </nav>
@@ -94,5 +95,6 @@
 <script src="/js/enrollment.js"></script>
 <script src="/js/listEnrollments.js"></script>
 <script src="/js/resetForm.js"></script>
+<script src="/js/logout.js"></script>
 </body>
 </html>
