--- a/app/Views/students/list.html
+++ b/app/Views/students/list.html
@@ -16,10 +16,7 @@
             <i class="bi bi-building me-2"></i>FIAP Admin
         </a>
         <div class="d-flex align-items-center">
-            <a href="#" class="btn btn-outline-light me-3">
-                <i class="bi bi-person-circle me-2"></i>Usuário
-            </a>
-            <a href="#" class="btn btn-danger">
+            <a href="#" id="logoutButton" class="btn btn-danger">
                 <i class="bi bi-box-arrow-right me-2"></i>Sair
             </a>
         </div>
@@ -75,5 +72,6 @@
 <script src="/js/bootstrap.bundle.min.js"></script>
 <script src="/js/students.js"></script>
 <script src="/js/resetForm.js"></script>
+<script src="/js/logout.js"></script>
 </body>
 </html>
