--- a/app/Views/courses/list.html
+++ b/app/Views/courses/list.html
@@ -95,6 +95,6 @@
 <script src="/js/enrollment.js"></script>
 <script src="/js/listEnrollments.js"></script>
 <script src="/js/resetForm.js"></script>
-<script src="/js/logout.js"></script>
+<script src="/js/guard.js"></script>
 </body>
 </html>
