--- a/app/Views/main.html
+++ b/app/Views/main.html
@@ -60,7 +60,6 @@
 </div>
 
 <script src="/js/bootstrap.bundle.min.js"></script>
-<script src="/js/main.js"></script>
-<script src="/js/logout.js"></script>
+<script src="/js/guard.js"></script>
 </body>
 </html>
