--- a/app/Views/students/list.html
+++ b/app/Views/students/list.html
@@ -72,6 +72,6 @@
 <script src="/js/bootstrap.bundle.min.js"></script>
 <script src="/js/students.js"></script>
 <script src="/js/resetForm.js"></script>
-<script src="/js/logout.js"></script>
+<script src="/js/guard.js"></script>
 </body>
 </html>
