--- a/app/Views/courses/form.html
+++ b/app/Views/courses/form.html
@@ -4,10 +4,12 @@
         <div class="mb-3">
             <label for="className" class="form-label" >Nome da Turma</label>
             <input type="text" class="form-control" id="className" name="name" required>
+            <div class="invalid-feedback">Nome da turma deve ter no mínimo 3 caracteres</div>
         </div>
         <div class="mb-3">
             <label for="classDescription" class="form-label">Descrição</label>
             <textarea class="form-control" id="classDescription" rows="3" name="description" required></textarea>
+            <div class="invalid-feedback">Descrição é obrigatória</div>
         </div>
     </div>
         <div class="modal-body">
