feat: implementa refresh token

--- a/app/Views/courses/list.html
+++ b/app/Views/courses/list.html
@@ -91,6 +91,7 @@
 
 
 <script src="/js/bootstrap.bundle.min.js"></script>
+<script src="/js/api.js"></script>
 <script src="/js/courses.js"></script>
 <script src="/js/enrollment.js"></script>
 <script src="/js/listEnrollments.js"></script>
