--- a/app/Views/main.html
+++ b/app/Views/main.html
@@ -60,6 +60,7 @@
 </div>
 
 <script src="/js/bootstrap.bundle.min.js"></script>
+<script src="/js/api.js"></script>
 <script src="/js/guard.js"></script>
 </body>
 </html>
