--- a/app/Views/students/list.html
+++ b/app/Views/students/list.html
@@ -70,6 +70,7 @@
 </div>
 
 <script src="/js/bootstrap.bundle.min.js"></script>
+<script src="/js/api.js"></script>
 <script src="/js/students.js"></script>
 <script src="/js/resetForm.js"></script>
 <script src="/js/guard.js"></script>
