--- a/app/Views/students/form.html
+++ b/app/Views/students/form.html
@@ -4,9 +4,8 @@
         <div class="modal-body">
             <div class="mb-3">
                 <label for="name" class="form-label">Nome *</label>
-                <input type="text" class="form-control" id="name" name="name"
-                       minlength="3" required>
-                <div class="invalid-feedback">Mínimo 3 caracteres</div>
+                <input type="text" class="form-control" id="name" name="name" required>
+                <div class="invalid-feedback"></div>
             </div>
 
             <div class="mb-3">
