fix: form validator msg

--- a/app/Views/courses/form.html
+++ b/app/Views/courses/form.html
@@ -3,7 +3,7 @@
     <div class="modal-body">
         <div class="mb-3">
             <label for="className" class="form-label" >Nome da Turma</label>
-            <input type="text" class="form-control" id="className" name="name" required>
+            <input type="text" class="form-control" id="className" name="name" minlength="3" required>
             <div class="invalid-feedback">Nome da turma deve ter no mínimo 3 caracteres</div>
         </div>
         <div class="mb-3">
